syntax = "proto3";

package papers.v1;

option go_package = "github.com/larwef/papers-please/api/papers/v1";

service PaperService {
    rpc GetCertificate(GetCertificateRequest) returns (GetCertificateResponse) {}
}

message GetCertificateRequest {
    // DER ecoded CSR.
    bytes certificate_signing_request = 1;
}

// PEM encoding on these fields because it makes it much easier for the client.
message GetCertificateResponse {
    // PEM encoded certificate.
    bytes certificate = 1;
    // PEM encoded CA certificates.
    repeated bytes ca_certificates = 2;
}